Fixed spacing
Fixed a percentage

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ h1{
     flex-flow: row wrap;
     justify-content: flex-start;
     background-color: white;
-    width:86%;
+    width:87%;
     margin: auto;
     border-radius: 10px;
     padding: 10px;
